feat: better v1 detection support